# BRS_task

./: CMakeLists.txt  Geometry.cpp  Geometry.h  PointSearcher.cpp  PointSearcher.h  README.md  Reader.hpp  task_main.cpp
python_proof/: Geometry.py  ReadData.py  cluster_intersection.py
